--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
                 "PORT": "8080",
                 "DBHOST": "localhost",
                 "DBPORT": "5432",
-                "DBUSER": "admin",
+                "DBUSER": "postgres",
                 "DBPASSWORD": "admin",
                 "DBNAME": "bookstore"
             },
